# AID-Labs

./: .gitignore  README.md  classification_model.ipynb  convolutional.ipynb  dataloaders.ipynb  decision-tree.ipynb  intro-pytorch.ipynb  intro-scikit-learn.ipynb  knn.ipynb  linear-regression.ipynb  logistic-regression.ipynb  naive-bayes.ipynb  pyproject.toml  random-forest.ipynb  stacking.ipynb  svm.ipynb  transfer-learning-alexnet.ipynb  transfer-learning-multilabel.ipynb  transfer-learning-timm.ipynb  transformers.ipynb  xgboost.ipynb
data/: .gitignore
