[project]
name = "aid-labs"
version = "0.1.0"
description = "Laboratorios de Análisis Inteligente de Datos"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.6.0",
    "datasets>=3.5.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "scikit-learn>=1.6.1",
    "split-folders>=0.5.1",
    "timm>=1.0.15",
    "torchvision>=0.21.0",
    "transformers[torch]>=4.51.1",
    "xgboost>=2.1.4",
]
